# QExileBot

./: Account.cpp  Account.h  AccountModel.cpp  AccountModel.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Character.h  CharacterModel.h  ExileClient.cpp  ExileClient.h  ExileGame.cpp  ExileGame.h  ExileSocket.cpp  ExileSocket.h  GameObject.cpp  GameObject.h  GameObjectScene.h  Global.h  Helper.cpp  Helper.h  Item.cpp  Item.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Packet.h  PacketField.h  PacketListModel.h  QExileBot.qrc  README.md  main.cpp
AStar/: astar.h  blockallocator.cpp  blockallocator.h
Data/: ActiveSkills.json  ArmourTypes.json  BuffDefinitions.json  Characters.json  ExperienceLevels.json  Inventories.json  ItemExperiencePerLevel.json  ObjectTypes.json  WeaponTypes.json
qss/: default.qss
script/: script.js
